# Raytracer

./: .gitignore  CMakeLists.txt  README.md
scenes/: cornell_box.json  glass_showcase.json  material_test.json  normal_map_demo.json  textured_spheres.json
src/: common.h  main.cpp
src/acceleration/: aabb.cpp  aabb.h  bvh.cpp  bvh.h
src/core/: camera.cpp  camera.h  light.cpp  light.h  ray.cpp  ray.h  scene.cpp  scene.h  scene_builder.cpp  scene_builder.h  scene_gallery.cpp  scene_gallery.h  scene_loader.cpp  scene_loader.h  utils.cpp  utils.h
src/geometry/: mesh.cpp  mesh.h  plane.cpp  plane.h  primitive.cpp  primitive.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/materials/: dielectric.cpp  dielectric.h  emissive.cpp  emissive.h  lambertian.cpp  lambertian.h  material.cpp  material.h  metal.cpp  metal.h  textured_lambertian.cpp  textured_lambertian.h
src/rendering/: framebuffer.cpp  framebuffer.h  integrator.cpp  integrator.h  progressive_renderer.cpp  progressive_renderer.h  renderer.cpp  renderer.h
src/textures/: checker_texture.cpp  checker_texture.h  image_texture.cpp  image_texture.h  normal_map.cpp  normal_map.h  texture.cpp  texture.h
src/viewer/: camera_controller.cpp  camera_controller.h  controller.cpp  controller.h  window.cpp  window.h
